# rs-clipboard

./: Cargo.toml
src/: main.rs
