[[bin]]
name = "cb"
path = "src/main.rs"

[package]
name = "Carrybooo-rs-clipboard-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
structopt = { version = "0.3.26", features = [ "paw" ] }
paw = "1.0"
